--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
       <button onclick="openVideoModal('https://firebasestorage.googleapis.com/v0/b/connex-832db.appspot.com/o/dheere%20dheere%20se(1080p).mp4?alt=media&token=ac431609-0825-49d7-b16c-07b2c0d18995')">Watch Video</button>
     </div>
   </section>
+   <section id="courses">
+    <div class="course">
+      <h2>WHAT IS EBITA</h2>
+      <img src="https://raw.githubusercontent.com/username/repository/branch/path/to/your-image.jpg" alt="Course Image" class="course-image">
+      <p>This course will teach you the basics of programming.</p>
+      <button onclick="openVideoModal('https://firebasestorage.googleapis.com/v0/b/connex-832db.appspot.com/o/dheere%20dheere%20se(1080p).mp4?alt=media&token=ac431609-0825-49d7-b16c-07b2c0d18995')">Watch Video</button>
+    </div>
+  </section>
+ <section id="courses">
+    <div class="course">
+      <h2>WHAT IS EBITA</h2>
+      <img src="https://raw.githubusercontent.com/username/repository/branch/path/to/your-image.jpg" alt="Course Image" class="course-image">
+      <p>This course will teach you the basics of programming.</p>
+      <button onclick="openVideoModal('https://firebasestorage.googleapis.com/v0/b/connex-832db.appspot.com/o/dheere%20dheere%20se(1080p).mp4?alt=media&token=ac431609-0825-49d7-b16c-07b2c0d18995')">Watch Video</button>
+    </div>
+  </section>
+
 
   <!-- The Modal -->
   <div id="videoModal" class="modal">
