--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
       cursor: pointer;
     }
 
-    /* Horizontal Course Section Styling */
+    /* Course Section Styling for Horizontal Layout */
     section#courses {
       display: flex;
-      flex-direction: row; /* Arrange courses in a row */
-      gap: 20px;           /* Adds spacing between courses */
-      overflow-x: auto;    /* Enables horizontal scrolling */
+      flex-wrap: nowrap; /* Prevent wrapping */
+      gap: 20px; /* Space between courses */
+      overflow-x: auto; /* Enables horizontal scrolling if needed */
+      padding: 20px 0;
     }
 
     .course {
@@ -56,7 +57,7 @@
       padding: 20px;
       border-radius: 10px;
       text-align: center; /* Center-aligns text */
-      min-width: 300px;   /* Fixed width to prevent shrinking */
+      min-width: 300px; /* Fixed width to keep the course block size consistent */
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
@@ -71,10 +72,10 @@
     }
 
     .course img {
-      max-width: 100%;
-      height: auto;
-      margin: 20px 0;
-      border-radius: 10px;
+      max-width: 80%; /* Set max width of the image */
+      height: auto; /* Maintain aspect ratio */
+      margin: 20px 0; /* Adds margin around the image */
+      border-radius: 10px; /* Optional: add rounded corners */
     }
 
     video {
@@ -113,8 +114,11 @@
   <div id="videoModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <!-- Video player instead of iframe -->
-      <video id="modalVideo" controls></video>
+      <!-- The Video with controlsList attribute -->
+      <video id="modalVideo" controls controlsList="nodownload" width="100%" height="450">
+        <source src="" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
     </div>
   </div>
 
@@ -125,23 +129,30 @@
       var video = document.getElementById("modalVideo");
       var span = document.getElementsByClassName("close")[0];
 
+      // Set the video source and show the modal
       video.src = videoURL;
       modal.style.display = "block";
-      video.play(); // Auto play the video when modal opens
 
+      // Close the modal on clicking 'X'
       span.onclick = function() {
         modal.style.display = "none";
-        video.pause(); // Pause video when closing
-        video.src = ""; // Stop video from downloading further
-      }
+        video.pause(); // Pause the video
+        video.src = ""; // Clear the video source
+      };
 
+      // Close the modal if clicked outside the modal content
       window.onclick = function(event) {
         if (event.target == modal) {
           modal.style.display = "none";
-          video.pause(); // Pause video when closing
-          video.src = ""; // Stop video from downloading further
+          video.pause(); // Pause the video
+          video.src = ""; // Clear the video source
         }
-      }
+      };
+
+      // Disable right-click context menu on video (to prevent downloads)
+      video.addEventListener('contextmenu', function(e) {
+        e.preventDefault(); // Disable right-click menu
+      });
     }
   </script>
 </body>
