--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       width: 100%; /* Full width */
       height: 100%; /* Full height */
       overflow: auto; /* Enable scroll if needed */
-      background-color: rgb(0,0,0); /* Fallback color */
       background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     }
 
@@ -43,14 +42,23 @@
       cursor: pointer;
     }
 
-    /* Course Section Styling */
+    /* Course Section Styling for Horizontal Layout */
+    section#courses {
+      display: flex;
+      flex-wrap: nowrap; /* Prevent wrapping */
+      gap: 20px; /* Space between courses */
+      overflow-x: auto; /* Enables horizontal scrolling if needed */
+      padding: 20px 0;
+    }
+
     .course {
       background-color: #fff;
       border: 1px solid #ddd;
       padding: 20px;
-      margin: 20px 0;
       border-radius: 10px;
       text-align: center; /* Center-aligns text */
+      min-width: 300px; /* Fixed width to keep the course block size consistent */
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
     .course h2 {
@@ -69,6 +77,14 @@
       margin: 20px 0; /* Adds margin around the image */
       border-radius: 10px; /* Optional: add rounded corners */
     }
+
+    video {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      max-height: 500px;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -79,10 +95,19 @@
   <section id="courses">
     <div class="course">
       <h2>WHAT IS EBITA</h2>
-      <img src="https://raw.githubusercontent.com/username/repository/branch/path/to/your-image.jpg" alt="Course Image" class="course-image">
-      <p>This course will teach you the basics of programming.</p>
+      <img src="https://raw.githubusercontent.com/username/repository/branch/path/to/your-image.jpg" alt="Course Image">
+      <p>This course will teach you the basics of EBITA.</p>
       <button onclick="openVideoModal('https://firebasestorage.googleapis.com/v0/b/connex-832db.appspot.com/o/dheere%20dheere%20se(1080p).mp4?alt=media&token=ac431609-0825-49d7-b16c-07b2c0d18995')">Watch Video</button>
     </div>
+
+    <div class="course">
+      <h2>Introduction to Programming</h2>
+      <img src="https://raw.githubusercontent.com/username/repository/branch/path/to/your-image.jpg" alt="Course Image">
+      <p>This course will teach you the basics of programming.</p>
+      <button onclick="openVideoModal('https://firebasestorage.googleapis.com/v0/b/connex-832db.appspot.com/o/BB4153EF165B05D6ECA2E965F9B379B3_video_dashinit.mp4?alt=media&token=59899bd4-3db5-40ef-ab06-4637a380cd4c')">Watch Video</button>
+    </div>
+    
+    <!-- Add more courses as needed -->
   </section>
 
   <!-- The Modal -->
